tests/snapshots/stream_response_test__tests__ntest_callback-7.snap
---
source: tests/stream_response_test.rs
expression: "&message"
---
id: "[id]"
object: chat.completion.chunk
created: "[created]"
model: gpt-3.5-turbo-0613
choices:
  - index: 0
    delta:
      role: ~
      content: " assist"
      function_call: ~
    finish_reason: ~

