tests/snapshots/stream_response_test__tests__ntest_callback-9.snap
---
source: tests/stream_response_test.rs
expression: "&delta"
---
id: "[id]"
object: chat.completion.chunk
created: "[created]"
model: gpt-4-0613
choices:
  - index: 0
    delta:
      role: ~
      content: " today"
      function_call: ~
    finish_reason: ~

